--- a/resources/ui/widget/components/SelectLinkType/SelectLinkType.html
+++ b/resources/ui/widget/components/SelectLinkType/SelectLinkType.html
@@ -1,5 +1,5 @@
 <div>
-    <div id="rtcGitConnectorSelectLinkTypeContainer" style="display: none;">
+    <div id="rtcGitConnectorSelectLinkTypeContainer" style="display: none">
         <div class="rtcGitConnectorSelectLinkType">
             <div class="linkTypeItem" data-link-type="ISSUE">Issues</div>
             <div class="linkTypeItem" data-link-type="REQUEST">Requests</div>
@@ -7,41 +7,61 @@
         </div>
     </div>
 
-    <p id="errorLoadingDataFromHostContainer" class="rtcGitConnectorMessage rtcGitConnectorMessageError" style="display: none;"></p>
+    <p
+        id="errorLoadingDataFromHostContainer"
+        class="rtcGitConnectorMessage rtcGitConnectorMessageError"
+        style="display: none"
+    ></p>
 
-    <div class="rtcGitConnectorViewAndSelectContainer" data-link-type="ISSUE" style="display: none;">
-        <div data-dojo-attach-point="viewAndSelectIssues"
-            data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewAndSelectIssues"></div>
+    <div class="rtcGitConnectorViewAndSelectContainer" data-link-type="ISSUE" style="display: none">
+        <div
+            data-dojo-attach-point="viewAndSelectIssues"
+            data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewAndSelectIssues"
+        ></div>
     </div>
 
-    <div class="rtcGitConnectorViewAndSelectContainer" data-link-type="REQUEST" style="display: none;">
-        <div data-dojo-attach-point="viewAndSelectRequests"
-            data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewAndSelectRequests"></div>
+    <div class="rtcGitConnectorViewAndSelectContainer" data-link-type="REQUEST" style="display: none">
+        <div
+            data-dojo-attach-point="viewAndSelectRequests"
+            data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewAndSelectRequests"
+        ></div>
     </div>
 
-    <div class="rtcGitConnectorViewAndSelectContainer" data-link-type="COMMIT" style="display: none;">
-        <div data-dojo-attach-point="viewAndSelectCommits"
-            data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewAndSelectCommits"></div>
+    <div class="rtcGitConnectorViewAndSelectContainer" data-link-type="COMMIT" style="display: none">
+        <div
+            data-dojo-attach-point="viewAndSelectCommits"
+            data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewAndSelectCommits"
+        ></div>
     </div>
 
-    <div data-dojo-attach-point="selectItemMessage"
-        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.selectItemMessage"></div>
+    <div
+        data-dojo-attach-point="selectItemMessage"
+        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.selectItemMessage"
+    ></div>
 
-    <div data-dojo-attach-point="setNewWorkItemValues"
-        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.setNewWorkItemValues"></div>
+    <div
+        data-dojo-attach-point="setNewWorkItemValues"
+        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.setNewWorkItemValues"
+    ></div>
 
     <div class="rtcGitConnectorListsToLinkContainer">
         <div id="rtcGitConnectorIssuesListToLink" class="rtcGitConnectorListToLink">
-            <div data-dojo-attach-point="viewIssuesToLink"
-                data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewIssuesToLink"></div>
+            <div
+                data-dojo-attach-point="viewIssuesToLink"
+                data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewIssuesToLink"
+            ></div>
         </div>
         <div id="rtcGitConnectorRequestsListToLink" class="rtcGitConnectorListToLink">
-            <div data-dojo-attach-point="viewRequestsToLink"
-                data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewRequestsToLink"></div>
+            <div
+                data-dojo-attach-point="viewRequestsToLink"
+                data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewRequestsToLink"
+            ></div>
         </div>
         <div id="rtcGitConnectorCommitsListToLink" class="rtcGitConnectorListToLink">
-            <div data-dojo-attach-point="viewCommitsToLink"
-                data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewCommitsToLink"></div>
+            <div
+                data-dojo-attach-point="viewCommitsToLink"
+                data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.viewCommitsToLink"
+            ></div>
         </div>
     </div>
 </div>
