--- a/resources/ui/widget/components/SelectRegisteredGitRepository/SelectRegisteredGitRepository.html
+++ b/resources/ui/widget/components/SelectRegisteredGitRepository/SelectRegisteredGitRepository.html
@@ -1,6 +1,9 @@
 <div class="rtcGitConnectorSelectRegisteredGitRepository">
     <label for="selectRegisteredGitRepository" class="rtcGitConnectorLabelText">Registered Git Repositories</label>
-    <div data-dojo-type="dijit/form/Select" data-dojo-attach-point="selectRegisteredGitRepository"
-        name="selectRegisteredGitRepository" class="rtcGitConnectorSelectList">
-    </div>
+    <div
+        data-dojo-type="dijit/form/Select"
+        data-dojo-attach-point="selectRegisteredGitRepository"
+        name="selectRegisteredGitRepository"
+        class="rtcGitConnectorSelectList"
+    ></div>
 </div>
