--- a/resources/ui/widget/components/ViewIssuesToLink/ViewIssuesToLink.html
+++ b/resources/ui/widget/components/ViewIssuesToLink/ViewIssuesToLink.html
@@ -1,5 +1,5 @@
 <div>
-    <div id="viewIssuesToLinkContainer" class="viewItemsToLinkContainer" style="display: none;">
+    <div id="viewIssuesToLinkContainer" class="viewItemsToLinkContainer" style="display: none">
         <label class="rtcGitConnectorLabelText">Issues to link</label>
         <div class="rtcGitConnectorViewItemsToLinkList" data-dojo-attach-point="listItemsContainer"></div>
     </div>
