--- a/resources/ui/widget/components/ListItem/ListItem.html
+++ b/resources/ui/widget/components/ListItem/ListItem.html
@@ -1,8 +1,22 @@
 <div data-dojo-attach-point="listItem">
-    <div class="${baseClass}Button" data-dojo-attach-point="itemButton" data-dojo-attach-event="onclick:_onButtonClick"></div>
-    <div class="${baseClass}Content" data-dojo-attach-point="itemContent" data-dojo-attach-event="onclick:_onContentClick">
-        <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine" data-dojo-attach-point="firstLine"></span>
-        <span class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine" data-dojo-attach-point="secondLine"></span>
+    <div
+        class="${baseClass}Button"
+        data-dojo-attach-point="itemButton"
+        data-dojo-attach-event="onclick:_onButtonClick"
+    ></div>
+    <div
+        class="${baseClass}Content"
+        data-dojo-attach-point="itemContent"
+        data-dojo-attach-event="onclick:_onContentClick"
+    >
+        <span
+            class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListFirstLine"
+            data-dojo-attach-point="firstLine"
+        ></span>
+        <span
+            class="rtcGitConnectorSelectListSpan rtcGitConnectorSelectListSecondLine"
+            data-dojo-attach-point="secondLine"
+        ></span>
     </div>
     <div class="${baseClass}Button exclamationTriangle" data-dojo-attach-point="itemRightButton"></div>
 </div>
