--- a/resources/ui/widget/components/NewWorkItemList/NewWorkItemList.css
+++ b/resources/ui/widget/components/NewWorkItemList/NewWorkItemList.css
@@ -6,7 +6,7 @@
 }
 
 .rtcGitConnectorNewWorkItemListTitle {
-    margin-bottom: .5em;
+    margin-bottom: 0.5em;
     font-size: 1em;
     font-weight: bold;
     color: #666666;
@@ -49,7 +49,7 @@ span.rtcGitConnectorNewWorkItemListRowBullet {
 }
 
 span.rtcGitConnectorNewWorkItemListRowBullet > span {
-	color: black;
+    color: black;
     font-size: 24px;
     position: relative;
     top: 1px;
