--- a/resources/ui/widget/components/RtcGitConnector/RtcGitConnector.css
+++ b/resources/ui/widget/components/RtcGitConnector/RtcGitConnector.css
@@ -79,7 +79,7 @@
 
 .rtcGitConnectorLabelText {
     display: inline-block;
-    margin-bottom: .5em;
+    margin-bottom: 0.5em;
     font-size: 1em;
     font-weight: bold;
     color: #666666;
@@ -109,7 +109,7 @@
     display: block;
     width: 100%;
     text-align: left;
-    padding: .2em;
+    padding: 0.2em;
     font-size: 1em;
 }
 
@@ -169,18 +169,18 @@
 
 .viewAndSelectSearchInput {
     flex-grow: 1;
-    margin-right: .5em;
+    margin-right: 0.5em;
     margin-top: auto;
     margin-bottom: auto;
 }
 
 .viewAndSelectSearchButton {
-    margin-right: .5em !important;
+    margin-right: 0.5em !important;
 }
 
 .viewAndSelectFilterInput {
     flex-grow: 1;
-    margin-right: .5em;
+    margin-right: 0.5em;
     margin-top: auto;
     margin-bottom: auto;
 }
@@ -210,7 +210,7 @@
 .rtcGitConnectorViewAndSelectListControl {
     display: flex;
     border-bottom: 1px solid #cacaca;
-    padding: .5em;
+    padding: 0.5em;
 }
 
 .viewAndSelectControlLabel {
