--- a/resources/ui/widget/components/SetNewWorkItemValues/SetNewWorkItemValues.html
+++ b/resources/ui/widget/components/SetNewWorkItemValues/SetNewWorkItemValues.html
@@ -1,6 +1,10 @@
-<div style="display: none;">
-    <div data-dojo-attach-point="setNewWorkItemAttributes"
-        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.setNewWorkItemAttributes"></div>
-    <div data-dojo-attach-point="setNewWorkItemLinks"
-        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.setNewWorkItemLinks"></div>
+<div style="display: none">
+    <div
+        data-dojo-attach-point="setNewWorkItemAttributes"
+        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.setNewWorkItemAttributes"
+    ></div>
+    <div
+        data-dojo-attach-point="setNewWorkItemLinks"
+        data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.setNewWorkItemLinks"
+    ></div>
 </div>
