--- a/resources/ui/widget/components/ViewAndSelectIssues/ViewAndSelectIssues.html
+++ b/resources/ui/widget/components/ViewAndSelectIssues/ViewAndSelectIssues.html
@@ -4,36 +4,46 @@
         <div class="rtcGitConnectorViewAndSelectList">
             <div class="rtcGitConnectorViewAndSelectListControls">
                 <div class="rtcGitConnectorViewAndSelectListControl">
-                    <div class="viewAndSelectControlLabel">Search: </div>
-                    <input id="viewAndSelectIssuesSearchInput"
+                    <div class="viewAndSelectControlLabel">Search:</div>
+                    <input
+                        id="viewAndSelectIssuesSearchInput"
                         class="viewAndSelectSearchInput"
                         placeholder="Search issues by id..."
                         data-dojo-type="dijit/form/TextBox"
                         data-dojo-attach-point="issuesSearchInput"
-                        data-dojo-props="trim:true">
-                    <button id="viewAndSelectIssuesSearchButton"
-                            class="primary-button viewAndSelectSearchButton"
-                            type="button">Search</button>
-                    <button id="viewAndSelectIssuesSearchClearButton"
-                            class="secondary-button"
-                            type="button">Clear</button>
+                        data-dojo-props="trim:true"
+                    />
+                    <button
+                        id="viewAndSelectIssuesSearchButton"
+                        class="primary-button viewAndSelectSearchButton"
+                        type="button"
+                    >
+                        Search
+                    </button>
+                    <button id="viewAndSelectIssuesSearchClearButton" class="secondary-button" type="button">
+                        Clear
+                    </button>
                 </div>
                 <div class="rtcGitConnectorViewAndSelectListControl">
-                    <div class="viewAndSelectControlLabel">Filter: </div>
-                    <input id="viewAndSelectIssuesFilterInput"
+                    <div class="viewAndSelectControlLabel">Filter:</div>
+                    <input
+                        id="viewAndSelectIssuesFilterInput"
                         class="viewAndSelectFilterInput"
                         placeholder="Filter issues by title, author, state, id..."
                         data-dojo-type="dijit/form/TextBox"
                         data-dojo-attach-point="issuesFilterInput"
-                        data-dojo-props="trim:true, intermediateChanges:true">
-                    <button id="viewAndSelectIssuesFilterClearButton"
-                        class="secondary-button"
-                        type="button">Clear</button>
+                        data-dojo-props="trim:true, intermediateChanges:true"
+                    />
+                    <button id="viewAndSelectIssuesFilterClearButton" class="secondary-button" type="button">
+                        Clear
+                    </button>
                 </div>
             </div>
             <div class="rtcGitConnectorViewAndSelectListItems" data-dojo-attach-point="listItemsContainer"></div>
         </div>
-        <div data-dojo-attach-point="detailsPane"
-            data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.detailsPane"></div>
+        <div
+            data-dojo-attach-point="detailsPane"
+            data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.detailsPane"
+        ></div>
     </div>
 </div>
