Use the new button css classes

--- a/resources/ui/widget/components/ViewAndSelectCommits/ViewAndSelectCommits.html
+++ b/resources/ui/widget/components/ViewAndSelectCommits/ViewAndSelectCommits.html
@@ -15,12 +15,12 @@
                     />
                     <button
                         id="viewAndSelectCommitsSearchButton"
-                        class="primary-button viewAndSelectSearchButton"
+                        class="j-button-primary viewAndSelectSearchButton"
                         type="button"
                     >
                         Search
                     </button>
-                    <button id="viewAndSelectCommitsSearchClearButton" class="secondary-button" type="button">
+                    <button id="viewAndSelectCommitsSearchClearButton" class="j-button-secondary" type="button">
                         Clear
                     </button>
                 </div>
@@ -34,7 +34,7 @@
                         data-dojo-attach-point="commitsFilterInput"
                         data-dojo-props="trim:true, intermediateChanges:true"
                     />
-                    <button id="viewAndSelectCommitsFilterClearButton" class="secondary-button" type="button">
+                    <button id="viewAndSelectCommitsFilterClearButton" class="j-button-secondary" type="button">
                         Clear
                     </button>
                 </div>
