--- a/resources/ui/widget/components/MainLayout/MainLayout.html
+++ b/resources/ui/widget/components/MainLayout/MainLayout.html
@@ -44,11 +44,11 @@
     <br />
 
     <div class="rtcGitConnectorActionButtons">
-        <button id="rtcGitConnectorSaveButton" class="primary-button" type="button" disabled>Save</button>
-        <button id="rtcGitConnectorSaveAndCloseButton" class="primary-button" type="button" disabled>
+        <button id="rtcGitConnectorSaveButton" class="j-button-primary" type="button" disabled>Save</button>
+        <button id="rtcGitConnectorSaveAndCloseButton" class="j-button-primary" type="button" disabled>
             Save and Close
         </button>
-        <button id="rtcGitConnectorCancelButton" class="secondary-button" type="button">Cancel</button>
+        <button id="rtcGitConnectorCancelButton" class="j-button-secondary" type="button">Cancel</button>
     </div>
 
     <div id="rtcGitConnectorFullPageLoadingOverlay" style="display: none">
