Use a jazz dialog instead of a dijit dialog

--- a/resources/ui/widget/components/RtcGitConnector/RtcGitConnector.html
+++ b/resources/ui/widget/components/RtcGitConnector/RtcGitConnector.html
@@ -1,14 +1,6 @@
 <div id="rtcGitConnectorDialog" style="display: none">
     <div
         data-dojo-type="dijit/Dialog"
-        data-dojo-attach-point="mainDialog"
-        title="Connect with Git"
-        id="connectWithGitMainDialog"
-    >
-        <div data-dojo-type="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.ui.widget.mainLayout"></div>
-    </div>
-    <div
-        data-dojo-type="dijit/Dialog"
         data-dojo-attach-point="mainErrorDialog"
         title="Browser Error"
         id="browserIsInternetExplorerContainer"
@@ -19,7 +11,7 @@
             <a href="https://www.google.com/chrome/index.html" target="_blank">Google Chrome</a>
             or
             <a href="https://www.mozilla.org/en-US/firefox/" target="_blank">Firefox</a>
-            instead.
+            or Edge instead.
         </p>
     </div>
 </div>
