Move the dialog buttons to the footer

--- a/resources/ui/widget/components/MainLayout/MainLayout.html
+++ b/resources/ui/widget/components/MainLayout/MainLayout.html
@@ -43,7 +43,7 @@
 
     <br />
 
-    <div class="rtcGitConnectorActionButtons">
+    <div class="j-buttonGroup-bleed-four" data-dojo-attach-point="footerButtons">
         <button id="rtcGitConnectorSaveButton" class="j-button-primary" type="button" disabled>Save</button>
         <button id="rtcGitConnectorSaveAndCloseButton" class="j-button-primary" type="button" disabled>
             Save and Close
