Add margin below the container div

--- a/resources/ui/widget/components/RtcGitConnector/RtcGitConnector.css
+++ b/resources/ui/widget/components/RtcGitConnector/RtcGitConnector.css
@@ -226,6 +226,7 @@
     background-color: white;
     border: 1px solid #cacaca;
     padding: 10px;
+    margin-bottom: 10px;
 }
 
 .rtcGitConnectorViewItemsToLinkList {
