Only ask for an access token when the error is 401

--- a/resources/ui/widget/components/MainLayout/MainLayout.html
+++ b/resources/ui/widget/components/MainLayout/MainLayout.html
@@ -41,6 +41,16 @@
         </p>
     </div>
 
+    <div id="repositoryConnectionFailedContainer" style="display: none">
+        <p class="rtcGitConnectorMessage rtcGitConnectorMessageError">
+            Unable to connect to the repository.<br /><br />
+            Check that the repository URL is correct and that you are connected to the same network where the repository
+            is hosted.<br />
+            For example, if the repository is hosted on an internal company network, make sure that you are connected to
+            that network directly or with a VPN.
+        </p>
+    </div>
+
     <br />
 
     <div class="j-buttonGroup-bleed-four" data-dojo-attach-point="footerButtons">
