--- a/resources/ui/widget/components/ViewAndSelectIssues/ViewAndSelectIssues.html
+++ b/resources/ui/widget/components/ViewAndSelectIssues/ViewAndSelectIssues.html
@@ -29,7 +29,7 @@
                     <input
                         id="viewAndSelectIssuesFilterInput"
                         class="viewAndSelectFilterInput"
-                        placeholder="Filter issues by title, author, state, id..."
+                        placeholder="Filter issues by title, author, state, labels, id..."
                         data-dojo-type="dijit/form/TextBox"
                         data-dojo-attach-point="issuesFilterInput"
                         data-dojo-props="trim:true, intermediateChanges:true"
