--- a/resources/ui/widget/components/ViewAndSelectRequests/ViewAndSelectRequests.html
+++ b/resources/ui/widget/components/ViewAndSelectRequests/ViewAndSelectRequests.html
@@ -29,7 +29,7 @@
                     <input
                         id="viewAndSelectRequestsFilterInput"
                         class="viewAndSelectFilterInput"
-                        placeholder="Filter requests by title, author, state, id..."
+                        placeholder="Filter requests by title, author, state, labels, id..."
                         data-dojo-type="dijit/form/TextBox"
                         data-dojo-attach-point="requestsFilterInput"
                         data-dojo-props="trim:true, intermediateChanges:true"
